--- a/slides/index.html
+++ b/slides/index.html
@@ -43,7 +43,10 @@
 		<div class="reveal">
 
 			<!-- Any section element inside of this container is displayed as a slide -->
-			<div class="slides">
+      <div class="slides">
+
+        <section>
+        </section>
 
         <section>
           <img class="stretch" src="img/bede.jpg">
